修改了主,副对角线的算法bug